--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "niknextt-thoughtful-learning",
   "private": true,
@@ -10,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@google/genai": "^1.38.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
